--- a/index.html
+++ b/index.html
@@ -365,6 +365,32 @@
             </div>
         </section>
 
+        <!-- Product Video -->
+        <section id="product-video" class="py-20 lg:py-32 bg-white">
+            <div class="max-w-7xl mx-auto px-6 lg:px-24">
+                <div class="flex flex-col items-center text-center gap-6 mb-12">
+                <h2 class="text-4xl lg:text-5xl font-medium">Discover BetterJohanna</h2>
+                <p class="text-lg text-[var(--token-gray-700)] max-w-2xl">
+                    Watch this short video to learn how our product works and how it can make your life easier.
+                </p>
+                </div>
+
+                <div class="bg-[var(--token-gray-100)] p-6 rounded-3xl shadow-lg">
+                    <!-- Responsive 16:9 video container -->
+                    <div class="relative w-full pb-[56.25%] rounded-2xl overflow-hidden">
+                        <iframe 
+                        src="https://www.youtube.com/embed/6VOqNVt_cmM" 
+                        title="Product Video" 
+                        frameborder="0" 
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                        allowfullscreen
+                        class="absolute top-0 left-0 w-full h-full">
+                        </iframe>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- FAQ Section -->
         <section id="faq" class="py-20 lg:py-32 bg-[var(--token-gray-50)]">
             <div class="max-w-7xl mx-auto px-6 lg:px-24">
