--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             display: inline-block;
             opacity: 0;
             transform: translateY(30px);
-            transition: opacity 0.6s cubic-bezier(0.44, 0, 0.56, 1), transform 0.6s cubic-bezier(0.44, 0, 0.56, 1);
+            transition: opacity 0.6s cubic-bezier(0.44, 0, 0.56, 1), transform 0.6s cubic-bezier(0.44, 0, 0.56, 1) !important;
         }
         .reveal-text.in-view span {
             opacity: 1;
@@ -139,7 +139,7 @@
         .faq-answer {
             max-height: 0;
             overflow: hidden;
-            transition: max-height 0.5s ease-in-out, padding 0.5s ease-in-out;
+            transition: max-height 0.5s ease-in-out, padding 0.5s ease-in-out !important;
             padding-top: 0;
             padding-bottom: 0;
         }
@@ -149,10 +149,18 @@
             padding-bottom: 1rem;
         }
         .faq-icon {
-            transition: transform 0.3s ease-in-out;
+            transition: transform 0.3s ease-in-out !important;
         }
         .faq-item.open .faq-icon {
             transform: rotate(45deg);
+        }
+        .arrow-right {
+            display: inline-block;      
+            transition: transform 0.3s ease !important; 
+        }
+        
+        .group:hover .arrow-right {
+            transform: translateX(4px);
         }
 
         .no-scrollbar::-webkit-scrollbar { display: none; }
@@ -439,7 +447,7 @@
                             <div class="mt-6">
                                 <a href="#contact" class="flex items-center gap-2 font-medium text-lg group">
                                     <span>Contact Us</span>
-                                    <i data-lucide="arrow-right" class="w-5 h-5 transition-transform group-hover:translate-x-1"></i>
+                                    <i data-lucide="arrow-right" class="arrow-right w-5 h-5"></i>
                                 </a>
                             </div>
                         </div>
